--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "lsc --map none bin/start.ls",
     "lint": "find . -name '*.ls' | xargs --max-args=10 ls-lint",
     "watch": "lsc bin/watch.ls",
-    "test": "mocha test/**/*.ls"
+    "test": "mocha 'test/**/*.ls'"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/miyabisun/bitbank-locust.git"
   },
-  "keywords": ["bitbank"],
+  "keywords": [
+    "bitbank"
+  ],
   "author": "miyabi",
   "license": "MIT",
   "bugs": {
@@ -25,7 +27,8 @@
     "node-bitbankcc": "^1.0.1",
     "prelude-ls": "^1.1.2",
     "pubnub": "^4.20.3",
-    "ramda": "^0.25.0"
+    "ramda": "^0.25.0",
+    "require-dir": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
